@@ -1,3 +1,10 @@
+2002-02-25  Miguel Sofer  <msofer@users.sourceforge.net>
+
+	* generic/tclBasic.c (Tcl_EvalEx): avoiding a buffer overrun
+	reported by Joe English, and restoring tcl7.6 behaviour for
+	[subst]: badly terminated nested scripts will raise an error
+	andnot be evaluated. [Bug #495207]
+
 2002-02-25  Don Porter  <dgp@users.sourceforge.net>
 
 	* unix/tclUnixPort.h: corrected strtoll prototype mismatch on Tru64.
